# fixed-linear

./: README.md  fixed-linear.cabal
src/Data/Vector/Fixed/: Linear.hs
