name:                fixed-linear
version:             0.1.0.0
synopsis:            Bridge between lthe linear and fixed-vector packages.
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (c) Anthony Cowley 2012
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Vector.Fixed.Linear
  build-depends:       base >= 4.6 && < 5, fixed-vector >= 0.1, linear >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010